<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soccer_marker_generation</name>
  <version>0.1.0</version>
  <description>Generates rviz display markers from soccer msgs</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>soccer_object_msgs</depend>  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <deprecated>
      This package will be removed in ROS J-Turtle due to the deprecation of soccer_object_msgs package.
      Instead, use packages from ros-sports/soccer_vision_3d_rviz_markers, which provides similar features with a different API.
    </deprecated>
  </export>
</package>
